# pyrtma

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  build_all_msg_defs.bat  build_all_msg_defs.sh  pyproject.toml  run_tests.sh  setup.py
.github/workflows/: deploy.yml  python-package.yml
docs/: make.bat  requirements.txt
docs/source/: api.rst  conf.py  index.md  index.rst
examples/: build_example_defs.bat  custom_formatter_example.py  data_log_example.py  example.py  example_context.py  example_precompile.py  example_sinewave.py  lsb_dash_example.py  lsb_dash_websocket_example.py  pyrtma_dash_example.py  pyrtma_dash_websocket_example.py  test_client_logging.py
examples/msg_defs/: climber_core.yaml  example.defs  example_messages.py  example_messages.yaml  examples_messages.py  message.py  message.pyi  message.yaml
examples/websocket/: example_ws_server.py
src/pyrtma/: __init__.py  __version__.py  _core.py  _message_base.py  build_core_defs.sh  client.py  client_logging.py  color_formatter.py  compile.py  console_log.py  constants.py  context.py  core_defs.py  core_defs.pyi  encoding.py  exceptions.py  graph.py  header.py  manager.py  message.py  message.pyi  message_base.py  message_buffer.py  message_data.py  parser.py  processor.py  proxy_client.py  reserved_field_names.json  unified_console_log.py  validators.py  web_manager.py
src/pyrtma/compilers/: c99.py  info.py  javascript.py  matlab.py  python.py  python_v1.py  yaml.py
src/pyrtma/core_defs/: core_defs.h  core_defs.yaml  data_logger.yaml  quick_logger.yaml  rtma.defs  rtma_core.yaml
src/pyrtma/data_logger/: __init__.py  __main__.py  cli.py  data_collection.py  data_formatter.py  data_logger.py  data_logger_client.py  data_set.py  dataset.py  dataset_api.py  dataset_writer.py  exceptions.py  metadata.py
src/pyrtma/data_logger/formatters/: json.py  msg_headers.py  quicklogger.py  raw.py
src/pyrtma/utils/: generate_test_defs.py  log_reader.py  print.py  quicklogger_reader.py  random.py  random_fields.py
testing/: build_msg_defs.bat  pyrtma_bench.py
testing/defs/: climber_config.yaml
tests/: _test_integration.py  build_test_defs.bat  json_timeit.py  test_encoding.py  test_integration.py  test_json.py  test_message.py  test_message_version.py  test_parser.py  test_sync.py  test_validators.py
tests/test_msg_defs/: test.defs  test_defs.py  test_defs.yaml  test_defs_1.yaml  test_defs_2.yaml
utils/: hello.py  log_reader.py  pyrtma_bench.bat  pyrtma_bench.py
utils/quicklogger_tools/: README.md  pyproject.toml
utils/quicklogger_tools/examples/: log_reader_usage.py
utils/quicklogger_tools/src/quicklogger_tools/: __init__.py  __version__.py  log_reader.py
